Load user in the user panel for messenger

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@ body {
   font-size: 1.4rem;
   line-height: 1.2;
 }
+
+/* Message panel CSS */
+.users-panel {
+  height: 900px;
+  overflow: scroll;
+}
